# LinuxReport

./: .gitignore  ACCESSIBILITY.md  ADMIN_DASHBOARD.md  Caching.md  FeedHistory.py  LLMModelManager.py  Litestream.md  Logging.py  ModelManager.py  ObjectStorageCacheWrapper.py  ObjectStorageLock.py  PLAYWRIGHT_MIGRATION.md  PWA.md  README.md  README_object_storage_sync.md  ROADMAP.md  Reddit.py  Scaling.md  Scraping.md  SqliteLock.py  Tor.py  WEATHER_IMPROVEMENTS.md  __init__.py  add_image.py  admin_stats.py  advanced_minimize_requirements.py  agents.md  ai_report_settings.py  analyze_feed_activity.py  app.py  app_config.py  article_deduplication.py  auto_update.py  auto_update_utils.py  auto_update_visualization.py  bandcamp-scrape  browser_fetch.py  cachetest.py  caching.py  caching_summary.md  (+88 more)
static/: linuxreport.css  linuxreport.js
static/css/: linuxreport.css
static/css/components/: ChatWindow.css  ConfigPage.css  Forms.css  Layout.css  MainContent.css  Navigation.css  Responsive.css  Typography.css  WeatherWidget.css
static/css/themes/: Themes.css
templates/: LogoTemplate.odt  about.html  accessibility.js  admin_dashboard.html  admin_performance.html  ai-process.js  app.js  base.html  chat.css  chat.js  config.css  config.html  config.js  configdone.html  core.css  core.js  infinitescroll.js  login.html  old_headlines.html  page.html  search.html  shared-config.js  shared-utils.js  sitebox.html  storage.html  themes.css  visitor_map.html  weather.css  weather.js
tests/: __init__.py  bot_detection_benchmark.py  cacheperftest.py  performance_benchmark.py  playwright_simple_test.py  playwright_test.py  selenium_test.py  test_accessibility.py  test_article_deduplication.py  test_browser_switch.py  test_compression.py  test_dedup.py  test_extract_titles.py  test_forms.py  test_sqlitelock.py
