[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LinuxReport"
version = "0.1.0"
description = "A Python/Flask-based news aggregation site for Linux, Covid-19, AI, Solar/PV, Detroit Techno and anything else you want."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "LGPLv3"}
authors = [
    {name = "Keith Curtis", email = "keithcu@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

dependencies = [
    "apache_libcloud>=3.8.0",
    "beautifulsoup4>=4.13.4",
    "cacheout>=0.16.0",
    "cssmin>=0.2.1",
    "diskcache>=5.6.3",
    "fake_useragent>=2.2.0",
    "feedparser>=6.0.11",
    "filelock>=3.18.0",
    "Flask>=3.1.0",
    "Flask-Assets>=2.1.0",
    "flask_cors>=6.0.0",
    "Flask-Compress>=1.17",
    "Flask-Login>=0.6.3",
    "Flask-Limiter>=3.12",
    "Flask-RESTful>=0.3.10",
    "Flask-WTF>=1.2.2",
    "Flask-Mobility>=2.0.1",
    "flask-monitoringdashboard>=4.0.0",
    "geoip2>=5.0.1",
    "graphviz>=0.20.3",
    "Jinja2>=3.1.6",
    "jsmin>=3.0.1",
    "MarkupSafe>=3.0.2",
    "matplotlib>=3.8.0",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "Pillow>=11.2.1",
    "pyahocorasick>=2.1.0",
    "PyYAML>=6.0.2",
    "requests>=2.32.0",
    "scikit-learn>=1.6.1",
    "selenium>=4.31.0",
    "sentence-transformers>=4.1.0",
    "setuptools>=79.0.0",
    "SocksiPy-branch>=1.01",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "webdriver-manager>=4.0.2",
    "Werkzeug>=3.1.3",
    "WTForms>=3.2.1",
]

[project.urls]
Homepage = "https://github.com/KeithCu/LinuxReport"
Repository = "https://github.com/KeithCu/LinuxReport.git"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "*.md", "*LICENSE*", "*README*"]

[tool.setuptools.package-data]
LinuxReport = ["*.json", "*.txt", "*.yaml", "*.conf"]