[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LinuxReport"
version = "0.1.0"
description = "A Python/Flask-based news aggregation site for Linux, Covid-19, AI, Solar/PV, Detroit Techno and anything else you want."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPLv3"}
authors = [
    {name = "Keith Curtis", email = "keithcu@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

dependencies = [
    "beautifulsoup4>=4.13.4",
    "cacheout>=0.16.0",
    "cssmin>=0.2.0",
    "diskcache>=5.6.3",
    "fake_useragent>=2.2.0",
    "feedparser>=6.0.11",
    "filelock>=3.18.0",
    "Flask>=3.1.0",
    "Flask-Assets>=2.1.0",
    "flask_cors>=6.0.0",
    "Flask-Compress>=1.17",
    "Flask-Login>=0.6.3",
    "Flask-Limiter>=3.12",
    "Flask-RESTful>=0.3.10",
    "Flask-WTF>=1.2.2",
    "Flask-Mobility>=2.0.1",
    "geoip2>=5.0.1",
    "graphviz>=0.20.3",
    "Jinja2>=3.1.6",
    "jsmin>=3.0.1",
    "MarkupSafe>=3.0.2",
    "matplotlib>=3.8.0",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "Pillow>=11.2.1",
    "praw>=7.7.0",
    "playwright>=1.40.0",
    "pyahocorasick>=2.1.0",
    "PyYAML>=6.0.2",
    "requests>=2.32.0",
    "scikit-learn>=1.6.1",
    "selenium>=4.31.0",
    "setuptools>=79.0.0",
    "SocksiPy-branch>=1.01",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "webdriver-manager>=4.0.2",
    "Werkzeug>=3.1.3",
    "WTForms>=3.2.1",
]

[project.urls]
Homepage = "https://github.com/KeithCu/LinuxReport"
Repository = "https://github.com/KeithCu/LinuxReport.git"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "config.yaml"
"httpd-vhosts-sample.conf" = "httpd-vhosts-sample.conf"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
cpu-pytorch = [
    "torch",
    "torchvision",
    "torchaudio",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 160
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true